49
================

06/09/24 FindPet: Register a report before transfer if no report_id exists #1500
04/09/24 FindPet: Add config screen #1500
04/09/24 FindPet: Add support for deactivating reports for non-adoptions/death #1500
04/09/24 Bad ID for microchipdate2
01/09/24 Fix bad fieldname for second microchip number
31/08/24 PetFBI: Add columns for IntakeDate and PickupAddress
31/08/24 PetFBI: Only include stray holds, not strays separately from holds
31/08/24 Found->Animal, don't assign original owner, copy found area to entry
31/08/24 New lost/found animal not using default colour
28/08/24 Fix "undefined" appearing when no additional fields present #1103
28/08/24 Refactor health and identification #1103
23/08/24 PetFBI: switch to send stray/holds instead of adoptable animals
23/08/24 Refactor/simplify rendering of additional fields #1103
22/08/24 Export animals as CSV: Include ANIMALID column for cross referencing
22/08/24 FindPet microchip registration initial implementation #1500
20/08/24 Fix ambiguous vacc/test dates in mobile UI
20/08/24 Disable table reflow by default after large number of complaints #1103
19/08/24 Refactor broke storing year/unique code when generating new #1103
17/08/24 Allow table reflow to be disabled, fix for filters  when reflowed #1103
16/08/24 Refactor fields_render into separate render_widget methods #1103
16/08/24 Fix layout of additional sliders for mobile #1103
15/08/24 Shelterview: Add "date brought in" and "last change date" modes #1512
15/08/24 Hide entry type column from entry history if disabled #1525
15/08/24 Support xbutton/xmarkup in all widgets, size choosers on mobile #1103
15/08/24 Querybuilder: Vaccination expiry date in animal reports
15/08/24 Querybuilder: Include DateExpires in medical reports
15/08/24 Fix bulk change animals layout #1103
14/08/24 Mobile friendly layout for find event, person waitinglist, incident #1103
14/08/24 Mobile UI: bug where add animal/shelter code not sent